--- a/package.json
+++ b/package.json
@@ -25,5 +25,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://nycbasic.github.io/simple-react-counter-app/"
 }
